# equine-refectory

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: log.hpp
include/rendering/: shader.hpp
res/shaders/: simple.frag  simple.vert
src/: CMakeLists.txt  main.c  main.cpp
src/rendering/: CMakeLists.txt  shader.cpp
